rename Frappe Schools to ERPNext Schools

--- a/user/guides/student/program-enrollment.html
+++ b/user/guides/student/program-enrollment.html
@@ -36,7 +36,7 @@
 		<div class="container">
 			<div class="navbar-header">
 				<a class="navbar-brand ellipsis" href="https://frappe.github.io/schools/">
-					<span>Frappe Schools</span>
+					<span>ERPNext Schools</span>
 				</a>
 				<a class="pull-right toggle-sidebar visible-xs">
 					<i class="octicon octicon-three-bars"></i>
@@ -106,7 +106,7 @@
 	<article class="web-page-content" id="program-enrollment" styl
 
     e="text-align: Left">
-	<p>This form allows you to enroll a student to a program. A student can be enrolled to multiple progranms.  </p>
+	<p>This form allows you to enroll a student to a program. A student can be enrolled to multiple programs.  </p>
 
 <p><img class="screenshot" alt="Student Applicant Enrollment" src="https://frappe.github.io/schools/assets/img/student/program-enrollment.png"></p>
 
