--- a/user/guides/student/student-applicant.html
+++ b/user/guides/student/student-applicant.html
@@ -36,7 +36,7 @@
 		<div class="container">
 			<div class="navbar-header">
 				<a class="navbar-brand ellipsis" href="https://frappe.github.io/schools/">
-					<span>Frappe Schools</span>
+					<span>ERPNext Schools</span>
 				</a>
 				<a class="pull-right toggle-sidebar visible-xs">
 					<i class="octicon octicon-three-bars"></i>
@@ -106,8 +106,8 @@
 	<article class="web-page-content" id="student-applicant" styl
 
     e="text-align: Left">
-	<p>A Student Applicant record needs to be created when a student applies for a programe at the institute.
-You can Approve or Reject a student applicant. By accepting a student applicaant you add them to the students list.</p>
+	<p>A Student Applicant record needs to be created when a student applies for a program at your institute.
+You can Approve or Reject a student applicant. By accepting a student applicant you can add them to the student master.</p>
 
 <p><img class="screenshot" alt="Student Applicant" src="https://frappe.github.io/schools/assets/img/student/student-applicant.png"></p>
 
@@ -117,14 +117,14 @@ You can Approve or Reject a student applicant. By accepting a student applicaant
 <li><p>By default when a student applicant is created in the system, the application status is set to 'Applied'</p></li>
 <li><p>You can update the status to 'Approved' once you approve the applicant to join your institute.</p></li>
 <li><p>Once the application status is set to 'Approved', the 'Enroll' button should show up. 
-You can create a student record against the student applicant by clicking on this button.</p></li>
+You can create a student record against the student applicant and enroll them to a program by clicking on this button.</p></li>
 <li><p>Once a student is created against the student applicant, the system shall set the application status to 'Admitted' 
 and will not allow you to change the application status unless the student record is deleted.</p></li>
 </ul>
 
 <h3>Student Enrollment</h3>
 
-<p>Once you approve a Student Applicant you can enroll them to a program. Select the 'Enroll' buttom,
+<p>Once you approve a Student Applicant you can enroll them to a program. When you click the 'Enroll' buttom,
 the system shall create a student against that applicant and redirect you to the <a href="https://frappe.github.io/schools/user/guides/student/program-enrollment.html">Program Enrollment form</a>.</p>
 
 <p><img class="screenshot" alt="Student Applicant Enrollment" src="https://frappe.github.io/schools/assets/img/student/student-applicant-enroll.png"></p>
