--- a/user/guides/student/student.html
+++ b/user/guides/student/student.html
@@ -36,7 +36,7 @@
 		<div class="container">
 			<div class="navbar-header">
 				<a class="navbar-brand ellipsis" href="https://frappe.github.io/schools/">
-					<span>Frappe Schools</span>
+					<span>ERPNext Schools</span>
 				</a>
 				<a class="pull-right toggle-sidebar visible-xs">
 					<i class="octicon octicon-three-bars"></i>
@@ -106,8 +106,8 @@
 	<article class="web-page-content" id="student-2" styl
 
     e="text-align: Left">
-	<p>A Student defined as person who has enrolled at your institute and you have accepted his application.
-The student doctype maintains personel details of the student. </p>
+	<p>A Student is defined as a person who has enrolled at your institute and you have accepted their application.
+The student doctype maintains personal details of the student. </p>
 
 <p>You can view everything related to a particular student on this page. Eg : Fees, Student Group, etc</p>
 
